tests/baselines/reference/recursiveBaseCheck2.errors.txt
tests/cases/compiler/recursiveBaseCheck2.ts(2,18): error TS2506: 'b2CircleShape' is referenced directly or indirectly in its own base expression.
tests/cases/compiler/recursiveBaseCheck2.ts(4,18): error TS2506: 'b2Shape' is referenced directly or indirectly in its own base expression.


==== tests/cases/compiler/recursiveBaseCheck2.ts (2 errors) ====
    declare module Box2D.Collision.Shapes {
        export class b2CircleShape extends b2Shape {
                     ~~~~~~~~~~~~~
!!! error TS2506: 'b2CircleShape' is referenced directly or indirectly in its own base expression.
        }
        export class b2Shape extends Box2D.Collision.Shapes.b2CircleShape {
                     ~~~~~~~
!!! error TS2506: 'b2Shape' is referenced directly or indirectly in its own base expression.
        }
    }
    declare module Box2D.Dynamics {
        export class b2ContactListener extends Box2D.Collision.Shapes.b2Shape {
        }
        export class b2FixtureDef extends Box2D.Dynamics.b2ContactListener {
        }
    }
    